--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BattlesnakeOfficial/starter-snake-typescript.git"
+    "url": "git+https://github.com/statox/battlesnake.git"
   },
   "keywords": [],
-  "author": "BattlesnakeOfficial",
+  "author": "statox",
   "license": "MIT",
-  "homepage": "https://github.com/BattlesnakeOfficial/starter-snake-typescript#readme",
+  "homepage": "https://github.com/statox/battlesnake",
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.3",
